# JWTAuth-RBAC

./: .env  README.md  main.py  pyproject.toml
config/: settings.py  urls.py
modules/bus_logic/: apps.py  urls.py  views.py
modules/middlewares/: jwt_auth.py
modules/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
modules/users/migrations/: 0001_initial.py
